# code_coil

./: .gitignore  CONTRIBUTING.md  README.md  TEMPLATE.md  add_entry_gui.py  analyze_qa.py  config.yaml  create_entry.py  export.py  project_organization.md  pyproject.toml  requirements.txt  stats.json
.github/workflows/: ci.yml  update_data.yml
code_coil/: __init__.py  entry.py
content/data_science/machine_learning/regression/: 001_what_is_linear_regression.md
content/python/01_basics/operators/: 001_addition_operator.md  003_logical_and_operator.md
content/python/01_basics/variables_and_types/: 002_integer_type.md  004_float_type.md  005_boolean_type.md
content/python/02_data_structures/dictionaries/: 001_what_is_a_dictionary.md  003_add_key_value.md  004_check_key_exists.md  (+1 more)
docs/: readme_draft.md
python_qa/01_basics/operators/: 002_equality_operator.md  004_assignment_operator.md  005_multiplication_operator.md
python_qa/01_basics/variables_and_types/: 001_what_is_a_variable.md  003_string_type.md
python_qa/02_data_structures/dictionaries/: 002_accessing_dict_values.md
python_qa/02_data_structures/lists/: 001_what_is_a_list.md  002_list_append_method.md  003_access_first_element.md  005_list_length.md  006_remove_element.md  007_list_comprehension.md
tests/: test_basic.py  test_create_entry.py
tests/integration/: test_create_entry_integration.py  test_full_sort.py
tests/unit/: test_archiver.py  test_config.py  test_create_entry_utils.py  test_logger.py
zenith_archive/: archiver.py  config.py  constants.py  logger.py  main.py
(+3 files in other folders)
